--- a/src/app/run-filter/run-filter.component.css
+++ b/src/app/run-filter/run-filter.component.css
@@ -23,5 +23,10 @@
 }
 
 .right-margin {
-    margin-right: 10px; 
+    margin-right: 10px;
+}
+
+.filter-button {
+    width: 160px;
+    margin-bottom: 10px;
 }
