--- a/frontend/src/app/run-filter/run-filter.component.html
+++ b/frontend/src/app/run-filter/run-filter.component.html
@@ -32,5 +32,5 @@
     </div>
     <button class="filter-button">Show my runs</button>
     <br/>
-    <button class="filter-button">Import new runs</button>
+    <input type="file" class="filter-button" value="Import new runs" multiple/>
 </div>
