--- a/frontend/src/app/upload/upload.component.css
+++ b/frontend/src/app/upload/upload.component.css
@@ -23,6 +23,6 @@
     padding-top: 5px;
     margin: auto;
     margin-bottom: 5px;
-    background-color: #FFC5B8;
+    background-color: #dfdddc;
     border: 1px solid #FCB5A5;
 }
