--- a/frontend/src/app/run-stats/run-stats.component.html
+++ b/frontend/src/app/run-stats/run-stats.component.html
@@ -1,5 +1,5 @@
 <div class="run-stats">
-    <p>Statistics about the run {{runId}}@{{runDate}}</p>
+    <p>Statistics about the run at {{runDate}}</p>
     <div class="run-chart">
         <canvas id="distance-chart"></canvas>
     </div>
